# px68k

./: .gitignore  CMakeLists.txt  Makefile  README.md  keyboard.h  keyconf.dat(us)  keymap.h  version.txt  winx68k.cpp
SDL/: cmdline.h  juliet.c  kanjiconv.c  keyboard.c  keyboard.h  menu_str_utf8.txt  mkcgrom.c  prop.c  winui.c  winui.h
SDL/SDL2/: GameController.c  GameController.h  dswin.c  softkey.c  windraw.c  windraw.h  winx68k.cpp  ymfm_wrap.cpp  ymfm_wrap.h
SDL/SDL3/: GamePad.c  GamePad.h  SoundCtrl.c  SoundCtrl.h  dswin.c  dswin.h  menudraw.c  softkey.c  windraw.c  winx68k.cpp  ymfm_wrap.cpp  ymfm_wrap.h
SDL2/: GameController.c  GameController.h  cdaspi.h  cdctrl.h  cdrom.h  common.h  dswin.c  dswin.h  fileio.h  joystick.c  joystick.h  kanjiconv.c  keyboard.c  keyboard.h  keymap.h  keytbl.inc  menu_str_utf8.txt  mkcgrom.c  mkcgrom.h  mouse.c  mouse.h  msg_tif.h  prop.c  prop.h  softkey.c  status.c  status.h  timer.c  windraw.c  windraw.h  winui.c  winui.h  winx68k.cpp  winx68k.h
SDL2/SDL1/: joystick.c  joystick.h  keyconf.dat(win-JIS)  keymap.h  windraw.c  windraw.h  winx68k.cpp  winx68k.h
SDL2/tool/: create_cgrom.c  keyconf.h  mk_kbdtbl.c  mkcgrom.c  mkcgrom.h
SDL3/: GamePad.c  common.c  dswin.c  juliet.h  menu_str_utf8.txt  mkcgrom.c  mkcgrom.h  mouse.h  prop.c  prop.h  softkey.c  windraw.c  winui.c  winui.h  winx68k.cpp
SDL3/SDL2/: GameController.c  dswin.c  windraw.c  windraw.h
SDL3/tool/: keyconf.c
fmgen/: file.cpp  file.h  fmg_wrap.cpp  fmg_wrap.h  fmgen.cpp  fmgen.h  fmgeninl.h  fmtimer.cpp  fmtimer.h  misc.h  opm.cpp  opm.h  opna.cpp  opna.h  psg.cpp  psg.h
icons/: icon.rc
m68000/: m68000.c  m68000.h
m68000/c68k/: c68k.c  c68k.h  c68k_op1.inc  c68k_op9.inc  c68k_opB.inc  c68k_opD.inc  c68kexec.c  core.h  gen68k.inc
macOS/: AppIcon.icns  Info.plist  Info.plist.make  SDL3  readme.txt
macOS/Contents/Resources/: px68k.icns
macOS/for pkg_config/: sdl2.pc  sdl3.pc
macOS/for pkg_config(Frameworks)/: sdl2.pc  sdl3.pc
osx/: Info.plist  readme.txt  sdl-config-mac  sdl2-config-mac
osx/Contents/: Info.plist  document.wflow
osx/Contents/Resources/: px68k.icns
px68k-android/jni/src/: Android.mk
win32api/: dosio.c  dosio.h  fake.c  mmsystem.h  peace.c  peace.h  windows.h
x11/: kanjiconv.c  menu_str_utf8.txt  prop.c  prop.h
x68k/: adpcm.c  adpcm.h  bg.c  bg.h  cpu_glue.c  crtc.c  crtc.h  d68k.c  d68k.h  disk_d88.c  disk_d88.h  disk_dim.c  disk_dim.h  disk_xdf.c  disk_xdf.h  dmac.c  dmac.h  fdc.c  fdc.h  fdd.c  fdd.h  gvram.c  gvram.h  ioc.c  ioc.h  irqh.c  irqh.h  m68000.h  mem_wrap.c  memory.h  mercury.c  mercury.h  mfp.c  mfp.h  midi.c  midi.h  midi_alsa.c  midi_alsa.h  midi_darwin.c  midi_darwin.h  (+24 more)
